--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 body {
   margin: 0;
   background: linear-gradient(270deg, #0f2027, #203a43, #2c5364);
