--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   position: relative;
   z-index: 1;
+  width: 100%;
 }
 
 body {
